<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sort_highest_rated"
            android:orderInCategory="100"
            android:title="@string/highest_rated"
            app:showAsAction="never"
            android:checked="true"/>

        <item
            android:id="@+id/sort_most_popular"
            android:orderInCategory="100"
            android:title="@string/most_popular"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_favorites"
            android:orderInCategory="100"
            android:title="@string/favorites"
            app:showAsAction="never" />

    </group>

</menu>